--- a/emailTemplates/welcome.mjml
+++ b/emailTemplates/welcome.mjml
@@ -3,7 +3,7 @@
     <mj-section>
       <mj-column>
         <mj-text font-size="22px" font-weight="bold">Namaste {{name}},</mj-text>
-        <mj-text>Welcome to Jain Prabhutmanch 🎉</mj-text>
+        <mj-text>Welcome to Jain Prabuddh Manch 🎉</mj-text>
         <mj-text>We’re happy to have you onboard. You can now explore stories, posts, sanghs, and more!</mj-text>
         <mj-button href="https://jainprabhutmanch.in" background-color="#28a745">Explore Now</mj-button>
       </mj-column>
