--- a/emailTemplates/verification.mjml
+++ b/emailTemplates/verification.mjml
@@ -2,7 +2,7 @@
   <mj-body>
     <mj-section>
       <mj-column>
-        <mj-text font-size="20px" font-weight="bold">Welcome to Jain Prabhutmanch</mj-text>
+        <mj-text font-size="20px" font-weight="bold">Welcome to Jain Prabuddh Manch</mj-text>
         <mj-text>Hello {{name}},</mj-text>
         <mj-text>Your verification code is:</mj-text>
         <mj-button background-color="#6a11cb" color="white">{{code}}</mj-button>
